[tool.poetry]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.1"
scipy = "^1.13.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
bokeh = "^3.4.0"
scikit-learn = "^1.4.1.post1"
watermark = "^2.4.3"
jax = "^0.4.25"
diffrax = "^0.5.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.5"
jupyterlab-vim = "^4.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
